@@ -4,6 +4,8 @@ Copyright (C) 2007-2013 Bertrand Chenal.
 Copyright (C) 2008-2020 B2CK SPRL.
 Copyright (C) 2011 Openlabs Technologies & Consulting (P) Ltd.
 Copyright (C) 2011-2020 Nicolas Évrard.
+Copyright (C) 2020 Maxime Richez
+Copyright (C) 2020 SALUC SA
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
