@@ -1,3 +1,4 @@
+* Add symbol widget
 * Add sql_pairing tool
 * Add format_datetime to Report
 * Allow sharing view searches
